--- a/style.css
+++ b/style.css
@@ -355,3 +355,128 @@ color: #FFFFFF;
     transition: 0.9s;
     color: #F6F6F6;
 }
+
+
+
+.popup {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    background-color: rgba(0, 0, 0, .5);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 300ms, opacity 300ms;
+  }
+
+  
+  .popup__container {
+    background-color: #fff;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    width: 900px;
+    height: 500px;
+    display: flex;
+  }
+
+  .popup__image {
+    max-width: 500px;
+    max-height: 500px;
+    margin-right: 30px;
+  }
+
+  .popup_opened {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .popup__detail{
+    margin-left: 15px;
+  }
+
+  .popup__detail li::marker {
+    color: #F1CDB3;;
+}
+  .popup__info {
+    margin-top: 50px;
+}
+.popup__title {
+    text-align: left;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__type {
+    text-align: left;
+    margin-top: 10px;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__text {
+    text-align: left;
+    margin-top: 40px;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+    max-width:350px;
+}
+.popup__detail {
+    text-align: left;
+    margin-top: 40px;
+    text-align: left;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__span{
+    font-weight: 700;
+}
+.popup__age {
+    margin-top: 11px;
+}
+.popup__inoculations {
+    margin-top: 11px;
+}
+
+.popup__diseases {
+    margin-top: 11px;
+}
+.popup__parasites {
+    margin-top: 11px;
+}
+
+  .close-button {
+    position: absolute;
+    right: -40px;
+    top: -52px;
+    border: 0;
+    background: url('src/modal_close_button.png') center center / 100% 100% no-repeat;
+    width: 52px;
+    height: 52px;  
+    fill: #000;
+    padding: 0;
+    cursor: pointer;
+    display: block;
+  }
