--- a/style.css
+++ b/style.css
@@ -356,6 +356,71 @@ color: #FFFFFF;
     color: #F6F6F6;
 }
 
+.help {
+}
+
+.help__screen {
+    margin-left: 40px;
+    margin-right: 40px;
+}
+.help__heading {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #545454;
+    margin: 0 auto;
+    margin-top: 80px;
+    margin-bottom: 60px;
+    max-width: 315px;
+    align-items: center;
+    text-align: center;
+}
+.help__list {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    padding-bottom: 100px;
+}
+.help__item {
+    text-align: center;
+    cursor: pointer;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.help__item:not(:first-child) {
+    margin: 0 0 54px 121px;
+}
+.help__item:first-child{
+    margin-bottom: 55px
+}
+.help__img{
+    margin-bottom: 30px;
+    max-width: 50px;
+}
+.help__item:nth-child(n+6) {
+    margin: 0 61px 0 61px;
+}
+
+.help__tittle {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+}
+
 
 
 .popup {
