--- a/style.css
+++ b/style.css
@@ -421,6 +421,99 @@ color: #FFFFFF;
     color: #545454;
 }
 
+footer{
+    background:url(src/noise_transparent@2x.png), radial-gradient(100% 215.42% at 0% 0%, #5B483A 0%, #262425 100%) , #211F20;
+}
+
+.footer_screen {
+    display: flex;
+    margin-left: 40px;
+    margin-right: 40px;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.footer__item {
+    margin-right: 130px;
+    padding-top: 55px;
+}
+.footer__tittle {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    width:310px;
+    margin-bottom: 40px;
+}
+.footer__tittle2{
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
+    width:310px;
+    margin-bottom: 30px;
+}
+.mail {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+    max-width: 300px;
+    margin-bottom: 45px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.mail__img {
+    margin-right: 20px;
+}
+.phone {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+    max-width: 300px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+}
+.phone__img {
+    margin-right: 20px;
+}
+.footer__address {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #F1CDB3;
+    max-width: 330px;
+    margin-bottom: 37px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+}
+.address__img {
+    margin-right: 20px;
+}
+.footer__img{
+    padding-top: 35px;
+    max-width:300px;
+    max-height:310px;
+}
+
 
 
 .popup {
