--- a/pets.css
+++ b/pets.css
@@ -110,6 +110,217 @@ h4{
     color: #292929;
 }
 
+.pets {
+    background: #F6F6F6;
+}
+.pets__screen {
+    margin-left: 40px;
+    margin-right: 40px;
+}
+.pets__heading {
+    max-width: 400px;
+    text-align: center;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #545454;
+    padding-bottom: 25px;
+    padding-top: 40px;
+    margin: 0 auto;
+}
+.pets__content {
+    padding-bottom: 100px;
+}
+.pets__list {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+
+.pets__item {
+    text-align: center;
+    background: #FAFAFA;
+    border-radius: 9px;
+    margin-bottom: 25px;
+}
+
+
+.pets__item:hover .pets__learn{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+    color: #F6F6F6;
+}
+.pets__img {
+}
+.pets__tittle {
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 23px;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #545454;
+    margin-top: 30px;
+    padding-bottom: 30px;
+}
+.pets__learn {
+    border: 2px solid #F1CDB3;
+    border-radius: 100px;
+    width: 187px;
+    height: 52px;
+    text-align: center;
+    align-items: center;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    margin-bottom: 30px;
+    cursor: pointer;
+    background: #FAFAFA
+}
+
+.pets__learn:hover{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+    color: #F6F6F6;
+}
+
+.pets__button {
+    background: #F1CDB3;
+    border-radius: 100px;
+    border:none;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 17px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #292929;
+    max-width: 270px;
+    height: 52px;
+    cursor: pointer;
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 15px 45px;
+    gap: 10px;
+    justify-content: center;
+    margin: 0 auto;
+    margin-top: 60px;
+    
+}
+
+.pets__navigation {
+    display: flex;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.pets__content{
+
+}
+.prev__prev {
+    margin-right: 20px;
+    border: 2px solid #CDCDCD;
+    border-radius: 100px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.prev__prev:hover{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+}
+.prev {
+    margin-right: 20px;
+    border: 2px solid #CDCDCD;
+    border-radius: 100px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.prev:hover{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+}
+.current {
+    margin-right: 20px;
+    background: #F1CDB3;
+    border-radius: 100px;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: #292929;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+}
+.next {
+    margin-right: 20px;
+    border: 2px solid #CDCDCD;
+    border-radius: 100px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.next:hover{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+}
+.next__next {
+    border: 2px solid #CDCDCD;
+    border-radius: 100px;
+    width: 52px;
+    height: 52px;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.next__next:hover{
+    background-color: #F1CDB3;
+    transition: 0.5s;
+}
+
 
 
 footer{
@@ -204,3 +415,126 @@ footer{
     max-width:300px;
     max-height:310px;
 }
+
+.popup {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    z-index: 1;
+    display: flex;
+    background-color: rgba(0, 0, 0, .5);
+    visibility: hidden;
+    opacity: 0;
+    transition: visibility 300ms, opacity 300ms;
+  }
+
+  
+  .popup__container {
+    background-color: #fff;
+    box-shadow: 0px 0px 25px rgba(0, 0, 0, 0.15);
+    border-radius: 9px;
+    text-align: center;
+    margin: auto;
+    position: relative;
+    width: 900px;
+    height: 500px;
+    display: flex;
+  }
+
+  .popup__image {
+    max-width: 500px;
+    max-height: 500px;
+    margin-right: 30px;
+  }
+
+  .popup_opened {
+    visibility: visible;
+    opacity: 1;
+  }
+
+  .popup__detail{
+    margin-left: 15px;
+  }
+
+  .popup__detail li::marker {
+    color: #F1CDB3;;
+}
+  .popup__info {
+    margin-top: 50px;
+}
+.popup__title {
+    text-align: left;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 35px;
+    line-height: 130%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__type {
+    text-align: left;
+    margin-top: 10px;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 115%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__text {
+    text-align: left;
+    margin-top: 40px;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+    max-width:350px;
+}
+.popup__detail {
+    text-align: left;
+    margin-top: 40px;
+    text-align: left;
+    font-family: 'Georgia';
+    font-style: normal;
+    font-size: 15px;
+    line-height: 110%;
+    letter-spacing: 0.06em;
+    color: #000000;
+}
+.popup__span{
+    font-weight: 700;
+}
+.popup__age {
+    margin-top: 11px;
+}
+.popup__inoculations {
+    margin-top: 11px;
+}
+
+.popup__diseases {
+    margin-top: 11px;
+}
+.popup__parasites {
+    margin-top: 11px;
+}
+
+  .close-button {
+    position: absolute;
+    right: -40px;
+    top: -52px;
+    border: 0;
+    background: url('src/modal_close_button.png') center center / 100% 100% no-repeat;
+    width: 52px;
+    height: 52px;  
+    fill: #000;
+    padding: 0;
+    cursor: pointer;
+    display: block;
+  }
