--- a/pets.css
+++ b/pets.css
@@ -538,3 +538,379 @@ footer{
     cursor: pointer;
     display: block;
   }
+
+  @media (min-width:768px){
+    .nav__list{
+        transform: translateX(0%) !important;
+    }
+}
+
+@media (max-width:768px){
+
+    
+    .start__screen{
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    header{
+        padding-top: 30px;
+    }
+
+    .content{
+        margin-top: 60px;    
+
+    }
+
+    .nav__header{
+        padding-bottom: 30px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+
+    .footer__item {
+        margin-right: 30px;
+        padding-top: 30px;
+    }
+
+    .footer__item:nth-child(2){
+        margin-right: 0;
+    }
+    
+    .footer_screen{
+        margin-left: 60px;
+        margin-right: 30px;
+      }
+
+
+
+    .footer__img{
+        margin: 0 auto;
+        padding-top: 25px;
+        width: 100%;
+        height: 100%;
+    }
+
+    .pets__heading{
+        padding-bottom: 15px;
+    }
+
+    .pets__screen{
+        margin-left: 94px;
+        margin-right: 94px;
+    }
+
+    .pets__tittle{
+        margin-top: 25px;
+    }
+
+    .pets__item{
+        margin-bottom: 30px;
+    }
+
+    .i7{
+        display: none;
+    }
+
+    .i8{
+        display: none;
+    }
+
+    .pets__navigation{
+        margin-top: 10px;
+    }
+
+    .pets__content{
+        padding-bottom: 76px;
+    }
+
+    .popup__container {
+        width: 630px;
+        height: 350px;
+      }
+    
+      .popup__image {
+        max-width: 350px;
+        max-height: 350px;
+        margin-right: 30px;
+      }
+    
+      .popup_opened {
+        visibility: visible;
+        opacity: 1;
+      }
+    
+      .popup__detail{
+        margin-left: 15px;
+      }
+    
+      .popup__detail li::marker {
+        color: #F1CDB3;;
+    }
+      .popup__info {
+        margin-top: 10px;
+    }
+    .popup__title {
+        text-align: left;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 35px;
+        line-height: 130%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__type {
+        text-align: left;
+        margin-top: 10px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 115%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__text {
+        text-align: left;
+        margin-top: 20px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 110%;
+        letter-spacing: 0.06em;
+        color: #000000;
+        max-width:260px;
+    }
+    .popup__detail {
+    }
+    .popup__span{
+    }
+    .popup__age {
+        margin-top: 6px;
+    }
+    .popup__inoculations {
+        margin-top: 6px;
+    }
+    
+    .popup__diseases {
+        margin-top: 6px;
+    }
+    .popup__parasites {
+        margin-top: 6px;
+    }
+    
+      .close-button {
+      }
+}
+
+@media (max-width:767px){
+
+      .burger{
+        display: block;
+      }
+
+      .nav__list {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: fixed;
+        transform: translateX(100%);
+        transition: transform 0.2s;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        z-index: 99;
+        background: #292929;;
+        color: white;
+        list-style: none;
+        padding-top: 4rem;
+        z-index: 2;
+        align-items: center;
+      }
+
+      .nav__item{
+        font-weight: 400;
+        font-size: 32px;
+        line-height: 160%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        margin-top: 43px;
+        max-width: 250px;
+        color: white;
+      }
+
+      .nav__item:nth-child(2){
+        color: white;
+      }
+
+}
+
+@media (max-width:750px){
+    .i4{
+        display: none;
+    }
+
+    .i5{
+        display: none;
+    }
+
+    .i6{
+        display: none;
+    }
+
+    .pets__list{
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+}
+
+@media(max-width:380px){
+    .footer_screen{
+        margin-left: 0;
+        margin-right: 0;
+    }
+
+    .footer__tittle{
+        margin: 0 auto;
+        text-align: center;
+        font-size: 25px;
+        margin-bottom: 43px;
+    }
+
+    .footer__tittle2{
+        margin:0 auto;
+        text-align: center;
+        font-size: 25px;
+        margin-bottom: 43px;
+        max-width: 270px;
+    }
+
+    .mail{
+        margin-left: 34px;
+    }
+
+    .phone{
+        margin-left: 34px;
+    }
+
+    .footer__address{
+        margin-left: 10px;
+    }
+
+    .footer__item{
+        margin-right: 0;
+    }
+
+    .nav__header{
+        margin-left: 20px;
+        margin-right: 20px;
+    }
+
+    .menu-btn{
+        top: 20px;
+        right: 10px;
+      }
+
+      .pets__screen{
+        margin-left: 25px;
+        margin-right: 25px;
+      }
+
+      .pets__heading{
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 25px;
+        line-height: 130%;
+        display: flex;
+        align-items: center;
+        text-align: center;
+        letter-spacing: 0.06em;
+        padding-top: 21px;
+        width: 300px;
+        padding-bottom: 21px;
+      }
+
+      .popup__container {
+        width: 240px;
+        height: 341px;
+      }
+    
+      .popup__image {
+        display: none;
+      }
+    
+      .popup_opened {
+        visibility: visible;
+        opacity: 1;
+      }
+    
+      .popup__detail{
+        margin-left: 15px;
+      }
+    
+      .popup__info {
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .popup__title {
+        text-align: left;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 35px;
+        line-height: 130%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__type {
+        text-align: left;
+        margin-top: 10px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 115%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__text {
+        text-align: left;
+        margin-top: 20px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 110%;
+        letter-spacing: 0.06em;
+        color: #000000;
+        max-width:260px;
+    }
+    .popup__detail {
+        margin-top: 24px;
+    }
+    .popup__span{
+    }
+    .popup__age {
+        margin-top: 6px;
+    }
+    .popup__inoculations {
+        margin-top: 6px;
+    }
+    
+    .popup__diseases {
+        margin-top: 6px;
+    }
+    .popup__parasites {
+        margin-top: 6px;
+    }
+    
+      .close-button {
+      }
+}
