--- a/style.css
+++ b/style.css
@@ -538,8 +538,8 @@ footer{
     text-align: center;
     margin: auto;
     position: relative;
-    width: 900px;
-    height: 500px;
+    max-width: 90%;
+    height: auto;
     display: flex;
   }
 
@@ -563,6 +563,8 @@ footer{
 }
   .popup__info {
     margin-top: 50px;
+    margin-right: 20px;
+    margin-bottom: 50px;
 }
 .popup__title {
     text-align: left;
@@ -863,8 +865,8 @@ footer{
     
       
       .popup__container {
-        width: 630px;
-        height: 350px;
+        max-width: 80%;
+        height: auto;
       }
     
       .popup__image {
@@ -1043,6 +1045,82 @@ footer{
         
       }
 
+}
+
+@media (max-width:650px){
+    .popup__container {
+        max-width: 240px;
+        height: 341px;
+      }
+    
+      .popup__image {
+        display: none;
+      }
+    
+      .popup_opened {
+        visibility: visible;
+        opacity: 1;
+      }
+    
+      .popup__detail{
+        margin-left: 15px;
+      }
+    
+      .popup__info {
+        margin-top: 10px;
+        margin-left: 10px;
+    }
+    .popup__title {
+        text-align: left;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 35px;
+        line-height: 130%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__type {
+        text-align: left;
+        margin-top: 10px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 20px;
+        line-height: 115%;
+        letter-spacing: 0.06em;
+        color: #000000;
+    }
+    .popup__text {
+        text-align: left;
+        margin-top: 20px;
+        font-family: 'Georgia';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 13px;
+        line-height: 110%;
+        letter-spacing: 0.06em;
+        color: #000000;
+        max-width:260px;
+    }
+    .popup__detail {
+        margin-top: 24px;
+    }
+    .popup__span{
+    }
+    .popup__age {
+        margin-top: 6px;
+    }
+    .popup__inoculations {
+        margin-top: 6px;
+    }
+    
+    .popup__diseases {
+        margin-top: 6px;
+    }
+    .popup__parasites {
+        margin-top: 6px;
+    }
 }
 
 @media (max-width:380px){
@@ -1296,7 +1374,7 @@ footer{
     }
 
     .popup__container {
-        width: 240px;
+        max-width: 240px;
         height: 341px;
       }
     
